deployment-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: diplomska
spec:
  serviceName: postgres-headless-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgresql
          image: postgres:16.3-alpine3.20
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
