deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: diplomska
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web
    containers:
    - name: web-app-pod
      image: jungelr/diplomska
      restartPolicy: always
      resources:
      limits:
        memory: 512Mi
        cpu: "1"
      requests:
        memory: 256Mi
        cpu: "0.2"
      ports:
        - containerPort: 8080
