service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: my-db
  namespace: diplomska
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
