service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: diplomska
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
